fixed issue 29. The intro div is no longer draggble on mobile view

--- a/assets/main.css
+++ b/assets/main.css
@@ -7,17 +7,19 @@ body {font-family: 'Open Sans', sans-serif; font-size: 16px/.75em; }
 
 .hidden {position: absolute; top: -9999px; left: -9999px;}
 
-.intro, .draggable, .iframe-search {background: rgba(255, 255, 255, 0.8); color: #111; float: left; margin: 5% 0 0 10%; z-index: 1000; position: absolute; cursor: pointer;}
+.intro, .draggable, .iframe-search, .mobile-intro {background: rgba(255, 255, 255, 0.8); color: #111; float: left; margin: 5% 0 0 10%; z-index: 1000; position: absolute; cursor: pointer;}
 
-.intro, .draggable {padding: 1em 1em 0 1em; width: 35%; }
+.intro, .draggable, .mobile-intro {padding: 1em 1em 0 1em; width: 35%; }
 
 .iframe-search {width: 74%; padding: 0.3em .5em 0 .5em;}
 
 h1 {font-family: 'Open Sans', sans-serif; font-size: 1em;}
 
-.intro p {font-size: .90em; line-height: 165%;}
+.mobile-intro {display: none;}
 
-.intro a {color: #027073;}
+.intro p, .mobile-intro p {font-size: .90em; line-height: 165%;}
+
+.intro a, .mobile-intro a {color: #027073;}
 
 .searchRoute {border-radius: 0 0 5px 5px;  max-width: 500px; }
 
@@ -38,7 +40,9 @@ input[type=submit]:hover {background-color: #66cccc; text-decoration: underline;
 #messages p {background:rgba(233, 60, 79,0.8); padding: 0.3em; color: #fefefe; }
 
 @media screen and (max-width:600px){
-    .intro {width: 90%; float: none; margin:0; position: relative;}
+    .intro {display: none;}
+    
+    .mobile-intro {display: block; width: 90%; float: none; margin:0; position: relative; cursor: auto;}
 
     input[type=text] {width: 33%;}
 
